<resources>

    <!--app name-->
    <string name="app_name">Function Junction</string>

    <!--activity names-->
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_ticket">TicketActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_artist">ArtistActivity</string>
    <string name="title_activity_parent_event">ParentEventActivity</string>
    <string name="title_activity_about">AboutActivity</string>

    <!--action bar names-->
    <string name="action_search">Search</string>

    <!--tab names-->
    <string name="events">Events</string>
    <string name="artists">Artists</string>
    <string name="tickets">Tickets</string>
    <string name="venues">Venues</string>

    <string name="event_date">Event Date here...</string>
    <string name="event_location">Event Location here...</string>
    <string name="event_lineup">Event Line-Up</string>
    <string name="event_view_lineup">View Line-Up</string>
    <string name="buy_tickets">Tickets</string>
    <string name="ticket_type">Ticket Type:</string>
    <string name="cost">Cost:</string>
    <string name="ticket_description">Description</string>
    <string name="total_ticket_cost">Total: </string>
    <string name="zero_cost">£0.00</string>
    <string name="my_tickets">My Tickets</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="title_activity_receipt">ReceiptActivity</string>
    <string name="booking_confirmation">Booking Confirmation</string>
    <string name="thank_you">Thank you for your purchase!</string>
    <string name="title_activity_venue">VenueActivity</string>
    <string name="home">home</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="no_upcoming_events">No upcoming Events</string>
    <string name="booking_complete">Your Booking Is Complete</string>
    <string name="booking_complete_desc">Thank you for your booking. The details of your booking are printed below. If these details are incorrect, please contact the Function Junction Customer Support Team.</string>
    <string name="ticket_qty">Quantity</string>
    <string name="booking_details">Booking Details:</string>
    <string name="zero_qty">0</string>
    <string name="customer_details">Customer Details:</string>
    <string name="booking_id">Booking ID:</string>
    <string name="current_artists">Current Artists</string>
    <string name="current_events">Current Events</string>
    <string name="current_venues">Current Venues</string>
    <string name="parent_event">Parent Event</string>
    <string name="artist">Artist</string>
    <string name="checkout">Checkout</string>
    <string name="your_receipt">Your Receipt</string>
    <string name="venue_location">Venue Location</string>
    <string name="title_activity_location">Map</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="confirmation_message">Have you selected all of your tickets? Press confirm to continue to the payment page.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="register_now">Not a member? Register now.</string>
    <string name="sign_in_now">Already registered? Sign in.</string>
    <string name="title_activity_child_event">ChildEventActivity</string>
    <string name="child_event">Child Event</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_postcode">Postcode</string>
    <string name="error_invalid_postcode">Postcode incorrect length.</string>
    <string name="title_activity_maps">Map</string>
    <string name="venue_address">Venue Address:</string>
    <string name="road_map">Road Map</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="phone_no">Phone No:</string>
    <string name="email">Email:</string>
    <string name="parking">Parking:</string>
    <string name="capacity">Capacity:</string>
    <string name="no_child_events">No Child Events</string>
    <string name="no_performances">No Performances</string>
    <string name="no_hosted_events">No hosted Events</string>
    <string name="artist_lineup">Artist Lineup</string>
    <string name="featured_events">Featured Events</string>
    <string name="upcoming_performances">Upcoming Performances</string>
    <string name="no_artist_lineup">No Artist Lineup</string>
    <string name="tickets_sold_out">No Tickets left. Sold out!</string>
    <string name="event_ticket_types">Event Ticket Types</string>
    <string name="booking_id_placeholder">Booking ID:</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="update_profile">Update Profile</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="company_info">Since the turn of the millennium, the Function Junction team has been dedicated to bringing you the easiest way to find events and buy tickets no matter where you live or what you\'re into. Live music, stand-up comedy, festivals, sporting events, theatre, family days out, or cinema - you\'ll find events of all kinds listed on functionjunction.com and we work with literally thousands of venues and ticket suppliers to bring you everything you need.\n\nNeed a ticket? We\'ve got your back. Contact our customer service team on 01752 7573734 for more information, or view out website on www.functionjunction.com/fuckyou</string>
    <string name="prompt_city">City</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="action_update">Update</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_address">Update Address</string>
    <string name="update_email">Update Email</string>
    <string name="update_name">Update Name</string>
    <string name="update_password">Update Password</string>
    <string name="my_profile">My Profile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="network_problem">There was a network problem. Please try again.</string>
    <string name="invalid_password">Invalid Password.</string>

</resources>
