<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--search-->
    <item android:id="@+id/tb_search"
        android:title="@string/action_search"
        android:icon="@mipmap/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/profile_settings"
        android:icon="@mipmap/ic_home_white_24dp"
        android:title="Profile Settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/about_us"
        android:icon="@mipmap/ic_home_white_24dp"
        android:title="@string/about_us"
        app:showAsAction="never"/>

    <item
        android:id="@+id/log_out"
        android:icon="@mipmap/ic_home_white_24dp"
        android:title="@string/log_out"
        app:showAsAction="never"/>
-
</menu>
