<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:context=".UI.activities.ReceiptActivity"
              tools:showIn="@layout/activity_receipt">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="22">

        <!--booking complete text view -->
        <TextView
            android:id="@+id/booking_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/booking_complete"
            android:textColor="@color/colorBlue800"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <!--booking complete message-->
        <TextView
            android:id="@+id/booking_complete_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/booking_confirmation"
            android:paddingLeft="10dp"
            android:paddingTop="8dp"
            android:text="@string/booking_complete_desc"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="43">

        <!--booking details header-->
        <TextView
            android:id="@+id/booking_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="8dp"
            android:text="@string/booking_details"
            android:textColor="@color/colorBlue800"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <!-- booking id text view-->
        <TextView
            android:id="@+id/booking_id_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/booking_details"
            android:paddingLeft="25dp"
            android:paddingTop="5dp"
            android:text="@string/booking_id" />

        <!-- customer booking id txt view-->
        <TextView
            android:id="@+id/booking_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/booking_id_placeholder"
            android:layout_below="@id/booking_details"
            android:layout_toRightOf="@id/booking_id"
            android:paddingLeft="25dp"
            android:paddingTop="5dp" />

        <!-- invoice list header container-->
        <LinearLayout
            android:id="@+id/invoice_list_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/booking_id_placeholder"
            android:paddingLeft="25dp"
            android:paddingTop="8dp">

            <!-- ticket type text view-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/ticket_type"
                android:textStyle="bold"/>

            <!-- ticket quantity text view-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/ticket_qty"
                android:textStyle="bold"/>

            <!-- ticket cost text view-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:text="@string/cost"
                android:textStyle="bold"/>

        </LinearLayout>

        <!-- invoice list view -->
        <ListView
            android:id="@+id/invoice_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/invoice_list_header"
            android:background="@null"
            android:fadeScrollbars="false"
            android:paddingLeft="25dp"
            android:paddingTop="5dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <!-- total layout container-->
        <LinearLayout
            android:id="@+id/total_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="25dp">

            <!-- total text view-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/total_ticket_cost"
                android:textStyle="bold" />

            <!-- total qty text view-->
            <TextView
                android:id="@+id/total_qty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25" />

            <!-- total cost text view-->
            <TextView
                android:id="@+id/total_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="30">

        <!--customer details header-->
        <TextView
            android:id="@+id/customer_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="8dp"
            android:text="@string/customer_details"
            android:textColor="@color/colorBlue800"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <!-- customer name-->
        <TextView
            android:id="@+id/customer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/customer_details"
            android:paddingLeft="25dp"
            android:paddingTop="2dp"/>

        <!-- customer email-->
        <TextView
            android:id="@+id/customer_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customer_name"
            android:paddingLeft="25dp"
            android:paddingTop="2dp"/>

        <!--qr code image-->
        <ImageView
            android:id="@+id/qr_code"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_alignParentRight="true"
            android:paddingRight="35dp"
            android:paddingTop="15dp"
            android:src="@drawable/qrcode"/>

        <!-- confirm order button-->
        <ImageView
            android:id="@+id/btn_confirm"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_below="@id/customer_email"
            android:paddingLeft="10dp"
            android:paddingTop="2dp"
            android:src="@drawable/confirm_order"/>

    </RelativeLayout>

</LinearLayout>
